# arxiv-rag

./: .gitignore  Dockerfile  Darvix-raggradio_launcher.py  Makefile  README.md  compose.yml  pyproject.toml
airflow/: Dockerfile  entrypoint.sh
airflow/dags/: arxiv_ingestion.py
src/: config.py  database.py  exceptions.py  main.py
src/models/: paper.py
src/routers/: ask.py  health.py  hybrid_search.py  search.py
src/schemas/arxiv/: paper.py
src/services/arxiv/: client.py  pdf_parser.py
src/services/cache/: redis.py
src/services/embeddings/: jina.py
src/services/groq/: client.py
src/services/indexing/: chunker.py  pipeline.py
src/services/observability/: langfuse.py  tracing.py
src/services/qdrant/: client.py
src/services/rag/: pipeline.py
src/services/search/: keyword.py
