[project]
name = "arxiv-rag"
version = "1.0.0"
description = "Production RAG system for arXiv paper curation"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Vector store
    "qdrant-client>=1.9.0",

    # LangChain
    "langchain>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-qdrant>=0.1.0",

    # PDF processing
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",

    # arXiv
    "arxiv>=2.1.0",

    # Redis
    "redis>=5.0.0",

    # Observability
    "langfuse>=2.36.0",

    # UI
    "gradio>=4.36.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
